# firewall_linux

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run
configs/: firewall_configs.json
firewall_control/: CMakeLists.txt  firewallctl.cpp
src/kernel/: common_kern.h  firewall.bpf.c
src/user/: common_user.h  connection.cpp  connection.h  main.cpp  utils.cpp  utils.h
tools/: gen_vmlinux_h.sh
tools/cmake/: FindBpfObject.cmake  FindLibBpf.cmake
